Add header in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="left">Header Logo</div>
+        <div class="right">
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+    </div>
+    <div class="body">
+        
+    </div>
+    <div class="footer">Copyright &copy; The Odin Project</div>
 </body>
 </html>
