Add 4 cards in main body

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </div>
     </div>
     <div class="body">
-        
+        <div>Card 1</div>
+        <div>Card 2</div>
+        <div>Card 3</div>
+        <div>Card 4</div>
     </div>
     <div class="footer">Copyright &copy; The Odin Project</div>
 </body>
