Add Card 1 contents

--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-        <div class="left">Header Logo</div>
-        <div class="right">
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </div>
+      <div class="left">Header Logo</div>
+      <div class="right">
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+        </ul>
+      </div>
     </div>
     <div class="body">
-        <div>Card 1</div>
-        <div>Card 2</div>
-        <div>Card 3</div>
-        <div>Card 4</div>
+      <div>
+        <div>
+          <h1>This website is awesome</h1>
+          <p>
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </div>
+        <img src="" alt="this is a placeholder for an image" />
+      </div>
+      <div>Card 2</div>
+      <div>Card 3</div>
+      <div>Card 4</div>
     </div>
     <div class="footer">Copyright &copy; The Odin Project</div>
-</body>
+  </body>
 </html>
