--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
         </div>
         <img src="" alt="this is a placeholder for an image" />
       </div>
-      <div>Card 2</div>
+      <div>
+        <div>Some random information</div>
+        <div class="card-container">
+            <div class="card">Card 1</div>
+            <div class="card">Card 2</div>
+            <div class="card">Card 3</div>
+            <div class="card">Card 4</div>
+        </div>
+      </div>
       <div>Card 3</div>
       <div>Card 4</div>
     </div>
