--- a/index.html
+++ b/index.html
@@ -31,13 +31,20 @@
       <div>
         <div>Some random information</div>
         <div class="card-container">
-            <div class="card">Card 1</div>
-            <div class="card">Card 2</div>
-            <div class="card">Card 3</div>
-            <div class="card">Card 4</div>
+          <div class="card">Card 1</div>
+          <div class="card">Card 2</div>
+          <div class="card">Card 3</div>
+          <div class="card">Card 4</div>
         </div>
       </div>
-      <div>Card 3</div>
+      <div>
+        <div>
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </div>
+        <div>-Thor, God of Thunder</div>
+      </div>
       <div>Card 4</div>
     </div>
     <div class="footer">Copyright &copy; The Odin Project</div>
