--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
         </div>
         <div>-Thor, God of Thunder</div>
       </div>
-      <div>Card 4</div>
+      <div>
+        <div>
+            <div>Call to action! It's time!</div>
+            <div>Sign up for our product by clicking that button over there!</div>
+        </div>
+        <button>Sign up</button>
+      </div>
     </div>
     <div class="footer">Copyright &copy; The Odin Project</div>
   </body>
