--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="header">
-      <div class="left">Header Logo</div>
-      <div class="right">
-        <ul>
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
-        </ul>
+    <div class="hero">
+      <div class="header">
+        <div class="left">Header Logo</div>
+        <div class="right">
+          <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <div class="body">
       <div>
         <div>
           <h1>This website is awesome</h1>
@@ -28,30 +29,30 @@
         </div>
         <img src="" alt="this is a placeholder for an image" />
       </div>
-      <div>
-        <div>Some random information</div>
-        <div class="card-container">
-          <div class="card">Card 1</div>
-          <div class="card">Card 2</div>
-          <div class="card">Card 3</div>
-          <div class="card">Card 4</div>
-        </div>
+    </div>
+    <div>
+      <div>Some random information</div>
+      <div class="card-container">
+        <div class="card">Card 1</div>
+        <div class="card">Card 2</div>
+        <div class="card">Card 3</div>
+        <div class="card">Card 4</div>
       </div>
+    </div>
+    <div>
       <div>
-        <div>
-          This is an inspiring quote, or a testimonial from a customer. Maybe
-          it's just filling up space, or maybe people will actually read it. Who
-          knows? All I know is that it looks nice.
-        </div>
-        <div>-Thor, God of Thunder</div>
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's
+        just filling up space, or maybe people will actually read it. Who knows?
+        All I know is that it looks nice.
       </div>
+      <div>-Thor, God of Thunder</div>
+    </div>
+    <div>
       <div>
-        <div>
-            <div>Call to action! It's time!</div>
-            <div>Sign up for our product by clicking that button over there!</div>
-        </div>
-        <button>Sign up</button>
+        <div>Call to action! It's time!</div>
+        <div>Sign up for our product by clicking that button over there!</div>
       </div>
+      <button>Sign up</button>
     </div>
     <div class="footer">Copyright &copy; The Odin Project</div>
   </body>
