Styled hero container

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="hero">
-      <div class="header">
+      <div class="hero-header">
         <div class="left">Header Logo</div>
         <div class="right">
           <ul>
@@ -18,16 +18,20 @@
           </ul>
         </div>
       </div>
-      <div>
-        <div>
-          <h1>This website is awesome</h1>
-          <p>
+      <div class="hero-body">
+        <div class="hero-body-container1">
+          <p class="hero-main-text">This website is awesome</p>
+          <p class="hero-sec-text">
             This website has some subtext that goes here under the main title.
             It's a smaller font and the color is lower contrast
           </p>
           <button>Sign up</button>
         </div>
-        <img src="" alt="this is a placeholder for an image" />
+        <div class="hero-body-container2">
+            <p class="hero-sec-text">
+                this is a placeholder for an image
+            </p>
+        </div>  
       </div>
     </div>
     <div>
