Styled info container

--- a/index.html
+++ b/index.html
@@ -34,13 +34,26 @@
         </div>  
       </div>
     </div>
-    <div>
-      <div>Some random information</div>
+    <div class="information-container">
+      <div class="info-title">Some random information</div>
       <div class="card-container">
-        <div class="card">Card 1</div>
-        <div class="card">Card 2</div>
-        <div class="card">Card 3</div>
-        <div class="card">Card 4</div>
+        <div class="cards">
+          <div class="card">Card 1</div>
+          <p class="info-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="cards">
+          <div class="card">Card 2</div>
+          <p class="info-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="cards">
+          <div class="card">Card 3</div>
+          <p class="info-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="cards">
+          <div class="card">Card 4</div>
+          <p class="info-text">this is some subtext under an illustration or image</p>
+        </div>
+        
       </div>
     </div>
     <div>
