Styled Inspiration container

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         
       </div>
     </div>
-    <div>
-      <div>
+    <div class="inspiration-container">
+      <div class="insp-box1">
         This is an inspiring quote, or a testimonial from a customer. Maybe it's
         just filling up space, or maybe people will actually read it. Who knows?
         All I know is that it looks nice.
       </div>
-      <div>-Thor, God of Thunder</div>
+      <div class="insp-box2">-Thor, God of Thunder</div>
     </div>
     <div>
       <div>
