--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
           <button>Sign up</button>
         </div>
         <div class="hero-body-container2">
-            <p class="hero-sec-text">
-                this is a placeholder for an image
-            </p>
-        </div>  
+          <p class="hero-sec-text">this is a placeholder for an image</p>
+        </div>
       </div>
     </div>
     <div class="information-container">
@@ -39,21 +37,28 @@
       <div class="card-container">
         <div class="cards">
           <div class="card">Card 1</div>
-          <p class="info-text">this is some subtext under an illustration or image</p>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
         </div>
         <div class="cards">
           <div class="card">Card 2</div>
-          <p class="info-text">this is some subtext under an illustration or image</p>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
         </div>
         <div class="cards">
           <div class="card">Card 3</div>
-          <p class="info-text">this is some subtext under an illustration or image</p>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
         </div>
         <div class="cards">
           <div class="card">Card 4</div>
-          <p class="info-text">this is some subtext under an illustration or image</p>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
         </div>
-        
       </div>
     </div>
     <div class="inspiration-container">
@@ -64,12 +69,16 @@
       </div>
       <div class="insp-box2">-Thor, God of Thunder</div>
     </div>
-    <div>
-      <div>
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button over there!</div>
+    <div class="cta-container-parent">
+      <div class="cta-container">
+        <div class="cta-box1">
+          <div class="cta-text1">Call to action! It's time!</div>
+          <div class="cta-text2">Sign up for our product by clicking that button over there!</div>
+        </div>
+        <div class="cta-box2">
+          <button>Sign up</button>
+        </div>
       </div>
-      <button>Sign up</button>
     </div>
     <div class="footer">Copyright &copy; The Odin Project</div>
   </body>
